Uploaded image for project: 'Couchbase Server'
  1. Couchbase Server
  2. MB-20112

[FTS] Segmentation fault in forestdb

    XMLWordPrintable

Details

    • Untriaged
    • Unknown
    • ForestDB: Oct 17 - Nov 4

    Description

      Build
      4.5.0-2601 (Watson GA build)

      test will run on Spock build soon.

      Testcase (new)
      ./testrunner -i INI_FILE.ini get-cbcollect-info=True,get-coredumps=True,get-logs=False,stop-on-failure=False,cluster=D:F:F,kvstore=forestdb,GROUP=DGM -t fts.stable_topology_fts.StableTopFTS.create_simple_default_index,cluster=D,F,D+F,dgm_run=1,active_resident_ratio=10,eviction_policy=fullEviction,fdb_compact_interval=180,fdb_compact_threshold=5,GROUP=DGM

      Default bucket holds 3.35M docs, there seems to be continuous index rebuilding because of crashes - https://gist.github.com/arunapiravi/68750ac5a25c7810940f76688325f640.
      FDB compaction is scheduled to run every 3 mins if a compaction threshold of 5% is met.

      In fts log on .224 -

      :
      [2016-07-07 22:44:41,018] - [fts_base:2431] INFO - /opt/couchbase/var/lib/couchbase/logs/fts.log:2016-07-07T20:49:09.566-07:00 [INFO] moss_herder: persistence progess, waiting: 1
      [2016-07-07 22:44:41,018] - [fts_base:2431] INFO - /opt/couchbase/var/lib/couchbase/logs/fts.log:2016-07-07T20:49:10.728-07:00 [INFO] moss_herder: persistence progess, waiting: 1
      [2016-07-07 22:44:41,018] - [fts_base:2431] INFO - /opt/couchbase/var/lib/couchbase/logs/fts.log:2016-07-07T20:49:14.297-07:00 [INFO] moss_herder: persistence progess, waiting: 1
      [2016-07-07 22:44:41,018] - [fts_base:2431] INFO - /opt/couchbase/var/lib/couchbase/logs/fts.log:Caught SIGSEGV in libforestdb at (null)
      [2016-07-07 22:44:41,019] - [fts_base:2431] INFO - /opt/couchbase/var/lib/couchbase/logs/fts.log:Breakpad caught a crash in forestdb. Writing crash dump to ./503aedba-3e27-b691-66184d3e-444f5ad5.dmp before terminating.
      [2016-07-07 22:44:41,019] - [fts_base:2431] INFO - /opt/couchbase/var/lib/couchbase/logs/fts.log:[goport] 2016/07/07 20:49:22 /opt/couchbase/bin/cbft terminated: signal: segmentation fault (core dumped)
      [2016-07-07 22:44:41,019] - [fts_base:2431] INFO - /opt/couchbase/var/lib/couchbase/logs/fts.log:2016-07-07T20:49:22.973-07:00 [INFO] main: /opt/couchbase/bin/cbft started (v0.3.1/4.1.0)
      

      Attaching breakpad dump file.

      Attachments

        Issue Links

          Activity

            People

              apiravi Aruna Piravi (Inactive)
              apiravi Aruna Piravi (Inactive)
              Votes:
              0 Vote for this issue
              Watchers:
              5 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                PagerDuty